--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   var map = L.map('map', {
     center: [34.725294048070495, -92.33903953882385], // EDIT coordinates to re-center map
     zoom: 18,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
-    scrollWheelZoom: false,
-    tap: false
+    scrollWheelZoom: true,
+    tap: true
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
